[package]
description = "Parser for BTRFS sendstreams"
edition = "2021"
keywords = ["btrfs", "sendstream"]
license = "MIT"
name = "sendstream_parser"
repository = "https://github.com/vmagro/sendstream_parser/"
version = "0.1.0"

[dependencies]
derive_more = "0.99"
getset = "0.1"
hex = "0.4"
nix = "0.26"
nom = "7"
thiserror = "1"
uuid = "1"
